--- a/thesis.tex
+++ b/thesis.tex
@@ -58,6 +58,7 @@
 \newacronym{srp}{SRP}{Signal Recognition Particle}
 \newacronym{sr}{SR}{Signal Recognition Particle Receptor}
 \newacronym{ap}{AP}{Arrest Peptide}
+\newacronym{emc}{EMC}{ER Membrane protein Complex}
 
 
 
