spont insertion schematic added

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -29,9 +29,10 @@ Furthermore, the hydrophobicity appears to be a determining factor in the delive
 \centering
 \includegraphics[width=1\textwidth]{TA_chapter/biogenesis-overview}
         \captionof{figure}[An overview of the biogenesis of tail-anchored proteins.]{\textbf{An overview of the biogenesis of tail-anchored proteins.}
-        (i) \gls{srp} of the co-translational insertion mechanism has been shown to be able to integrate \gls{ta} proteins. Sec61s role in this is disputed, and it is likely other proteins are involved in membrane partitioning instead.
-        (ii) The intensively studied Get (yeast) or TRC40 (mammalian) pathway can target either for membrane integration or degradation of the \gls{ta} protein.
-        (iii) In yeast, a novel mechanism was identified in which Snd1 binds to the folded \gls{ta} protein and delivers it to the membrane\--bound Snd2 and Snd3 complex.
+
+        (i) The intensively studied Get (yeast) or TRC40 (mammalian) pathway can target either for membrane integration or degradation of the \gls{ta} protein.
+        (ii) In yeast, a novel mechanism was identified in which Snd1 binds to the folded \gls{ta} protein and delivers it to the membrane\--bound Snd2 and Snd3 complex.
+        (iii) \gls{srp} of the co-translational insertion mechanism has been shown to be able to integrate \gls{ta} proteins. Sec61s role in this is disputed, and it is likely other proteins are involved in membrane partitioning instead.
         (iv) A recently identified insertase, the EMC, can integrate \gls{ta} proteins with relatively polar \gls{tmh}s into the \gls{er}.
         (v) A handful of \gls{ta} proteins with relatively polar \gls{tmh} regions have been observed spontaneously integrating into the membrane using Hsp40 and Hsc70 as chaperones.
         This system may be employed for mitochondrial localisation.
@@ -693,7 +694,7 @@ These polar faces would not be as repulsed by the interfacial environment as eit
 Scrambling the cytochrome b5 \gls{tmh} sequence whilst maintaining the same hydrophobicity (DSNSS W W T N W V I P A I S A L I V A L M YR to DSNSS W W A S A I I A T M I P L L V N V W YR) reduces the insertion potential \cite{Brambillasca2006}; there is more to it than hydrophobicity alone.
 It becomes apparent that the 3D arrangement of these relatively polar \gls{tmh} residues is conserved and is probably the key to spontaneous insertion of \gls{tmh}s.
 
-\begin{figure}[!ht]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{TA_chapter/cytb5-biochemistry}
         \captionof{figure}[Structural biochemical analysis of a homology model of cytochrome b5.]{\textbf{Structural biochemical analysis of a homology model of cytochrome b5.}
@@ -710,7 +711,7 @@ It becomes apparent that the 3D arrangement of these relatively polar \gls{tmh} 
 \end{figure}
 
 
-\begin{figure}[!ht]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{TA_chapter/ptp1b-biochemistry}
         \captionof{figure}[Structural biochemical analysis of a homology model of PTP1b.]{\textbf{Structural biochemical analysis of a homology model of PTP1b.}
@@ -723,6 +724,24 @@ It becomes apparent that the 3D arrangement of these relatively polar \gls{tmh} 
 }
 
 \label{fig:ptp1b-biochemistry}
+\end{figure}
+
+We speculate that this polar face allows the unassisted approach to the membrane's polar phospholipid head groups, and once in sufficiently close proximity, the hydrophobic side of the helix is entropically driven by the water environment into the membrane (Figure \ref{fig:spont-insertion-patch}).
+This close proximity is less likely to be achieved if there is no side of the \gls{tmh} to favourably interact with the head groups, even though average hydrophobicity could be similar.
+Once integrated, the \gls{tmh} charged flanking regions help sustain integration in lieu of a more hydrophobic \gls{tmh} core.
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=1\textwidth]{TA_chapter/spont-insertion-patch}
+        \captionof{figure}[A cartoon of a potential method the cytochrome b5 TMH could integrate spontaneously into the membrane.]{\textbf{A cartoon of a potential method the cytochrome b5 TMH could integrate spontaneously into the membrane.}
+        A) The marginally hydrophobic \gls{tmh} in teal cannot approach the membrane interface.
+        B) Although the average hydrophobicity is the same as the teal \gls{tmh}, by having a more hydrophobic side (blue), and a more polar side (green), the \gls{ta} protein now has a \gls{tmh} surface that may interact more favourably with the interfacial region.
+        Once interacting with the membrane sufficiently close to the interfacial region, the hydrophobic face is still being entropically driven by water molecules from the cytosol, which would also drive partitioning into the membrane.
+        Once integrated, the strong positive-inside negative-outside charges on the \gls{tmh} flanks compensate for the lack of hydrophocitiy in the core of the \gls{tmh}.
+
+}
+
+\label{fig:spont-insertion-patch}
 \end{figure}
 
 \section{Summary}
